--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{html,css,scss,json,astro}]
+[*.{css,scss,json}]
 indent_size = 4
 
 [*.{astro}]
