--- a/.editorconfig
+++ b/.editorconfig
@@ -8,10 +8,10 @@ indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{css,scss,json}]
+[*.{css,scss}]
 indent_size = 4
 
-[*.{astro}]
+[*.{astro,json}]
 indent_size = 2
 
 [*.ts]
