--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "astro": "^5.1.1",
-    "install": "^0.13.0",
-    "npm": "^11.0.0",
+    "hast-util-from-html-isomorphic": "^2.0.0",
+    "rehype-autolink-headings": "^7.1.0",
     "rehype-external-links": "^2.1.0",
+    "rehype-slug": "^6.0.0",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
