--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.0.3",
+    "@astrojs/react": "^4.1.3",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.4",
     "@astrojs/vercel": "^8.0.1",
@@ -18,12 +19,16 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "astro": "^5.1.1",
     "hast-util-from-html-isomorphic": "^2.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-external-links": "^2.1.0",
     "rehype-slug": "^6.0.0",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
+    "@types/react": "^19.0.5",
+    "@types/react-dom": "^19.0.3",
     "prettier": "^2.8.4",
     "prettier-plugin-astro": "^0.8.0",
     "sass": "^1.63.6"
