--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "astro": "^5.1.1",
+    "dompurify": "^3.2.3",
     "hast-util-from-html-isomorphic": "^2.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
