--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "astro": "^5.1.1",
     "hast-util-from-html-isomorphic": "^2.0.0",
+    "isomorphic-dompurify": "^2.24.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "rehype-autolink-headings": "^7.1.0",
